--- a/index.html
+++ b/index.html
@@ -10,6 +10,148 @@
 </head>
 
 <body>
+    <div class="container">
+        <div id="rows">
+          <div class="code row">
+            <div class="secret socket">?</div>
+            <div class="secret socket">?</div>
+            <div class="secret socket">?</div>
+            <div class="secret socket">?</div>
+            <div class="lock"></div>
+          </div>
+          <div class="row" id="turn8">
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+          </div>
+          <div class="row" id="turn7">
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+          </div>
+          <div class="row" id="turn6">
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+          </div>
+          <div class="row" id="turn5">
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+          </div>
+          <div class="row" id="turn4">
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+          </div>
+          <div class="row" id="turn3">
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+          </div>
+          <div class="row" id="turn2">
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+            <div class="socket"></div>
+          </div>
+          <div class="row" id="turn1">
+            <div class="socket 1"></div>
+            <div class="socket 2"></div>
+            <div class="socket 3"></div>
+            <div class="socket 4"></div>
+          </div>
+        </div>
+  
+        <div id="hints">
+            <div class="hint">
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+            </div>
+            <div class="hint">
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+            </div>
+            <div class="hint">
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+            </div>
+            <div class="hint">
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+            </div>
+            <div class="hint">
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+            </div>
+            <div class="hint">
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+            </div>
+            <div class="hint">
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+            </div>
+            <div class="hint">
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+              <div class="row">
+                <div class="js-hint-socket socket"></div>
+                <div class="js-hint-socket socket"></div>
+              </div>
+            </div>
+          </div>
+
     <script type="text/javascript" src="scripts.js"></script>
 </body>
 
