--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" oncontextmenu="return false;">
         <div id="rows">
           <div class="code row">
             <div class="secret socket">?</div>
@@ -19,7 +19,7 @@
             <div class="secret socket">?</div>
           </div>
           <div class="row" id="turn8">
-            <div class="socket 1"></div>
+            <div class="socket 1" ></div>
             <div class="socket 2"></div>
             <div class="socket 3"></div>
             <div class="socket 4"></div>
