--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opdracht 13 - Yahtzee</title>
+    <title>Opdracht 14 - Mastermind</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&&family=Gloria+Hallelujah&ffamily=Heebo:wght@800&display=swap" rel="stylesheet">
 </head>
