--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint11">
         <div class="row">
@@ -114,7 +114,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint10">
         <div class="row">
@@ -125,7 +125,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint9">
         <div class="row">
@@ -136,7 +136,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint8">
         <div class="row">
@@ -147,7 +147,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint7">
         <div class="row">
@@ -158,7 +158,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint6">
         <div class="row">
@@ -169,7 +169,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint5">
         <div class="row">
@@ -180,7 +180,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint4">
         <div class="row">
@@ -191,7 +191,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint3">
         <div class="row">
@@ -202,7 +202,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint2">
         <div class="row">
@@ -213,7 +213,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
       </div>
       <div class="hint" id="hint1">
         <div class="row">
@@ -224,7 +224,7 @@
           <div class="socket"></div>
           <div class="socket"></div>
         </div>
-        <div class="lock">O</div>
+        <div class="lock">!</div>
 
       </div>
       <!--- Modals-->
